# seg-background

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
src/organ_masker/: cli.py  main_sam2_organmasker.py  postproc.py  roi_ui.py  sam2_runner.py  volume_io.py
src/seg_background/: cli.py
